yamls/visayamls/cp/ingress/appingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prophecy-app
  namespace: prophecy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: prophecy-letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
spec:
  tls:
  - secretName: prophecy-tls
    hosts:
    - prophecy.stage.visa.com
  rules:
    - host: prophecy.stage.visa.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: appservice
              servicePort: 9002
