yamls/visayamls/cp/ingress/cgwebingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prophecy-cgweb
  namespace: prophecy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
spec:
  tls:
  - secretName: prophecy-tls
    hosts:
    - cgweb.stage.visa.com
  rules:
    - host: cgweb.stage.visa.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: cgweb
              servicePort: 9003
