yamls/visayamls/cp/ingress/gitingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prophecy-gitserver
  namespace: prophecy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: prophecy-letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers 'X-Frame-Options';
      server_tokens off;
      location ~ ^/explore/users(.*) {
         deny all;
         return 403;
      }
spec:
  tls:
  - secretName: prophecy-tls
    hosts:
    - gitserver.stage.visa.com
  rules:
    - host: gitserver.stage.visa.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: gitserver
              servicePort: 3000
