yamls/visayamls/cp/ingress/metagraphingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prophecy-metagraph
  namespace: prophecy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
      location ~ ^/graphiql(.*) {
         deny all;
         return 403;
      }
spec:
  tls:
  - secretName: prophecy-tls
    hosts:
    - metagraph.stage.visa.com
  rules:
    - host: metagraph.stage.visa.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: metagraph
              servicePort: 9004
